--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LoginScreen</string>
+    <string name="facebook_app_id">330386787438003</string>
+    <string name="fb_login_protocol_scheme">fb330386787438003</string>
+
 </resources>
